--- a/OSK_Mobile/OSK_Mobile.Android/OSK_Mobile.Android.csproj
+++ b/OSK_Mobile/OSK_Mobile.Android/OSK_Mobile.Android.csproj
@@ -117,5 +117,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\PhoneIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\PaymentIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
