--- a/OSK_Mobile/OSK_Mobile/OSK_Mobile.csproj
+++ b/OSK_Mobile/OSK_Mobile/OSK_Mobile.csproj
@@ -43,6 +43,12 @@
     <EmbeddedResource Update="Pages\Student\DrivePracticalDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\Student\PaymentDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Pages\Student\PaymentsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\Student\StudentCourseDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
