--- a/OSK_Mobile/OSK_Mobile/OSK_Mobile.csproj
+++ b/OSK_Mobile/OSK_Mobile/OSK_Mobile.csproj
@@ -27,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Pages\Employee\AcceptDrivePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\Employee\DriveActivitesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
