--- a/OSK_Mobile/OSK_Mobile.Android/OSK_Mobile.Android.csproj
+++ b/OSK_Mobile/OSK_Mobile.Android/OSK_Mobile.Android.csproj
@@ -61,6 +61,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
+    <PackageReference Include="PCLStorage">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.FirebasePushNotification">
       <Version>3.3.10</Version>
     </PackageReference>
