--- a/OSK_Mobile/OSK_Mobile/OSK_Mobile.csproj
+++ b/OSK_Mobile/OSK_Mobile/OSK_Mobile.csproj
@@ -11,8 +11,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="userData.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="userData.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="PCLStorage" Version="1.0.2" />
     <PackageReference Include="Plugin.FirebasePushNotification" Version="3.3.10" />
     <PackageReference Include="Plugin.LocalNotification" Version="9.1.2" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
