--- a/OSK_Mobile/OSK_Mobile.Android/OSK_Mobile.Android.csproj
+++ b/OSK_Mobile/OSK_Mobile.Android/OSK_Mobile.Android.csproj
@@ -129,5 +129,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\PaymentIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\oskImage.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\oskImage2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\test.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\test2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
